--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="app"></div>
     <script src="lib/vue.js"></script>
+    <script src="lib/vue-router.global.js"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
