--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div id="app"></div>
+    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="lib/vue.js"></script>
     <script src="lib/vue-router.global.js"></script>
     <script type="module" src="./js/main.js"></script>
